# api-test-framework

./: .bandit  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODEBUDDY.md  Dockerfile  Dockerfile.api  Jenkinsfile  Makefile  README.md  alembic.ini  cli.py  conftest.py  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  index.html  nginx.conf  precommit_output.txt  pyproject.toml  requirements.txt  test_batch2_result.txt  test_batch3_result.txt  test_output.txt  test_p2_all_result.txt  test_result.txt
.codebuddy/plans/: T3-2-scheduler-engine_9c699ae8.md  T3-3-environment-management_90db41b2.md  fix-allure-report-gh-pages_4de0f584.md  fix-github-actions-ci_86f82ffc.md  fix-persistence-config-missing_9e29ac1c.md  fix-pytest-collection-errors_4508deb9.md  generate-codebuddy-and-fix-conflicts_7175ee9e.md  generate-codebuddy-and-fix-conflicts_f51491ad(未完成).md  persistence-switch-and-todo_f3d7211f.md  remove-integration-tests-from-ci_15caf7b4.md  route-to-database-migration_dc4c7c26.md  tdesign-vs-shadcn-comparison_2ab9e253.md  tdesign-vs-shadcn-comparison_938c1988(未完成).md
.github/: dependabot.yml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 46c790b96d37_init_create_all_tables.py  57a1b9c8d2e3_add_schedules_table.py  6a2c3d8e4f5a_add_environments_table.py  a7b1c9d8e4f6_add_context_snapshots.py  b2d4e9f5c7a8_add_mock_rules_table.py
api/: __init__.py  auth.py  dependencies.py  init.py  main.py
api/routers/: __init__.py  analytics.py  assertions.py  auth.py  cases.py  coverage.py  environments.py  executions.py  mocks.py  recorder.py  reports.py  schedules.py  suites.py  users.py  workers.py
api/schemas/: __init__.py  analytics.py  assertion.py  auth.py  case.py  common.py  coverage.py  environment.py  execution.py  report.py  schedule.py
api/static/: index.html
assertions/: pagination_checks.py
config/: config.yaml  env.yaml
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 12a44ab46191f9ff.txt  13259f5ac1bd2d36.txt  16b92db723d0f625.txt  16bc5de43440b015.txt  1d33163fb8686fa.txt  1e00a8373a808fe7.txt  1eed47c664dfefa2.txt  2262c08ea4457bff.txt  23d4a786ffcf1d7b.txt  25252e67b5e914ee.txt  25aba20f5ca154ab.txt  25d77b408ddbd5cf.txt  2685fea1d8871487.txt  2687b1fe49ffc9ea.txt  29a8493d3cc2fc60.txt  2a389374def5f3ce.txt  2b4f68a01f580212.txt  2bb43c5f15c7466e.txt  2cc9290f1813e9fd.txt  2e4a36548488b462.txt  2feba89e80c207c6.txt  30e27097ef67b306.txt  318efa3672cdb6ce.txt  34d7f9b884a34bc6.txt  364de8b0457db416.txt  37bc970965785028.txt  392f7058e6628ad4.txt  397fd3cd87b024bf.txt  3d925476a622457d.txt  3de0ce70b6d2f852.txt  3f611e30a1bcd5ab.txt  3f6ee7179206764.txt  4238a1944e065428.txt  427a1b2bf4c1afba.txt  42cd69599943b6ca.txt  44502b3d9a1d7445.txt  45fbd798b058fee7.txt  46c4c645b68b0618.txt  4997d084faa2a892.txt  4a6549c5f6143254.txt  (+127 more)
data/test-cases/: 1082902ee291fb3.json  11038ba6b5aa5242.json  11652b190a1a9beb.json  11a1e864a5f11769.json  12371770f1c41a55.json  128949a58914ebd2.json  129a499503c719e0.json  12a2c8f099e11253.json  12d2fdd4ccdafd3c.json  1332352a52b95056.json  135511b4f55656c5.json  1361260a310ebcf4.json  14e48b4d5b55a2db.json  166c834910379eaa.json  168dc8583ce61374.json  16b17358ea3196c3.json  16bf1cd6159649e8.json  17981764dea8451b.json  17b6aa1a9b3be6d8.json  181cdf89b9906ba7.json  18add32e5eaf4eb3.json  18c4fc86643cd773.json  1ad5e71d0a917a4b.json  1b0162bcb129a1ad.json  1b1cbcc9c9168514.json  1b4e460cb46ea693.json  1c6e98befea6b7a9.json  1cf3ea7d128632c2.json  1d0f4ad0dd2e2c88.json  1d49e56749a9e972.json  1de40b207252f803.json  1df7e8c8f248c202.json  1e1d350e511cdc12.json  1f07177a079c43b9.json  1f2443a967ba0382.json  1f379b7e10a33398.json  1f57fc96d102ce67.json  1f7f7102158af24.json  1fa034f5985de27d.json  1fac7f93f5c5ddef.json  (+452 more)
deploy/: Makefile  deploy.sh
doc/: architecture-review.md  coding-standards.md  development-plan.md
docker/: entrypoint.sh
docs/: architecture-review.md  coding-standards.md  development-plan.md  frontend-development-plan.md  phase5-design.md  server.py  tdesign-vs-shadcn-comparison.md
export/: influxDbData.txt  prometheusData.txt
framework/: __init__.py  assertion.py  cli.py  client.py  collector.py  config.py  config_schema.py  context.py  context_snapshot.py  datasource.py  db.py  exceptions.py  execution_orchestrator.py  extract_pipeline.py  extractor.py  fixtures_loader.py  generator.py  models.py  parser.py  parser_models.py  report.py  runner.py  scheduler.py  sync.py  worker_health.py  ws.py
framework/assertion/: __init__.py  engine.py  smart.py
framework/executors/: __init__.py  base.py  grpc_executor.py  http_executor.py  ws_async_executor.py  ws_executor.py
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
history/: duration-trend.json  history.json
tests/: conftest.py  test_recorder_integration.py  test_smart_assertion.py
widgets/: duration-trend.json  duration.json  history-trend.json  severity.json  status-chart.json  suites.json  summary.json
worker/: __init__.py  celery_app.py  tasks.py
(+238 files in other folders)
