[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-test-framework"
version = "1.0.0"
description = "企业级 API 自动化测试框架"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE*"]
requires-python = ">=3.10"
dependencies = [
    # ── Core Test Framework ──
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    # ── HTTP Client ──
    "httpx>=0.27.0",
    # ── Configuration & Template ──
    "PyYAML>=6.0.1",
    "Jinja2>=3.1.3",
    "jsonpath-ng>=1.6.1",
    # ── Data Validation ──
    "pydantic>=2.6.0",
    # ── Reporting ──
    "pytest-html>=4.1.1",
    "allure-pytest>=2.13.2",
    # ── Parallel Execution ──
    "pytest-xdist>=3.5.0",
    # ── Retry ──
    "pytest-rerunfailures>=13.0",
    # ── Logging ──
    "structlog>=23.1.0",
    # ── API Server ──
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # ── CLI ──
    "typer>=0.15.0",
    # ── Utilities ──
    "colorama>=0.4.6",
]

[project.optional-dependencies]
db = [
    "SQLAlchemy>=2.0.25",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.14.0",
]
ws = [
    "websockets>=12.0",
]
grpc = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
]
dev = [
    "safety>=2.4.0",
    "bandit>=1.7.0",
    "watchdog>=4.0.0",
    "pip-tools>=7.4.0",
]
all = [
    "SQLAlchemy>=2.0.25",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.14.0",
    "websockets>=12.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "safety>=2.4.0",
    "bandit>=1.7.0",
    "watchdog>=4.0.0",
    "pip-tools>=7.4.0",
]

[project.scripts]
autotest = "framework.cli:app"

[tool.setuptools.packages.find]
include = ["framework*", "assertions*", "api*"]
exclude = ["alembic*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["build/", "dist/", ".venv/", "__pycache__/", "tests/", "docs/"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests", "testcases"]
addopts = "-v --tb=short --strict-markers"
timeout = 600
timeout_method = "thread"
markers = [
    "smoke: 冒烟测试",
    "regression: 回归测试",
    "P0: 最高优先级",
    "P1: 高优先级",
    "P2: 中优先级",
    "websocket: WebSocket 测试",
    "db: 数据库测试",
    "http: HTTP 方法测试",
    "get: GET 请求",
    "post: POST 请求",
    "put: PUT 请求",
    "delete: DELETE 请求",
    "performance: 性能测试",
    "headers: 响应头断言",
    "extract: 变量提取",
    "regex: 正则匹配",
    "status: 状态码测试",
    "auth: 认证测试",
    "login: 登录流程",
    "protected: 受保护接口",
    "security: 安全测试",
    "data_driven: 数据驱动测试",
    "crud: 增删改查",
    "local: 本地接口测试",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)-8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ["framework"]
omit = ["tests/*", "testcases/*", "docs/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
